--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -77,7 +77,7 @@
 			</li> -->
 
 			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
+				<a class="nav-link" href="about.html"><span class="whitecolor">BIO</span></a>
 			<!-- </li>
 			<li class="nav-item active">
 				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
