--- a/dcms.html
+++ b/dcms.html
@@ -57,7 +57,7 @@
 				<a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
+				<a class="nav-link" href="about.html"><span class="whitecolor">BIO</span></a>
 			</li>
 			<!-- <li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
