--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@
             </li>
 
 	  <li class="nav-item active">
-        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
+        <a class="nav-link" href="about.html"><span class="whitecolor">BIO</span></a>
       </li>
     <!--  <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
